frontend/src/containers/App.module.css
.app {
  margin: auto;
  text-align: left;
  display: flex;
  justify-content: space-between;
  height: 100%;
  background-color: #ff6637;
}

.contentWrapper {
  flex: 2;
  background-color: #daf1fb;
  overflow: auto;
}

.content {
  max-width: 600px;
  margin: 2rem 3rem;
}

.content a,
.content a:visited {
  font-weight: bold;
  color: #ff6637;
  text-decoration: none;
}

.content a:hover {
  color: #ffcb3a;
}

.login {
  padding: 1rem;
  font-size: 1.75rem;
}

.login img {
  border-radius: 4em;
  border: 3px solid #ccc;
  vertical-align: middle;
}

.login a {
  text-decoration: none;
  font-size: 1.25rem;
}

.login a,
.login a:visited {
  color: #111;
}

.login a:hover,
.login a.active,
.login a.active:visited {
  color: #ffcb3a;
}

.nav {
  display: block;
  flex: 1;
  padding: 1rem 1rem;
  min-width: 140px;
}

.nav ul {
  padding: 0;
  list-style-type: none;
}

.nav li {
  margin: 10px;
}

.nav a {
  text-decoration: none;
}

.nav a,
.nav a:visited {
  color: #111;
}

.nav a:hover,
.nav a.active,
.nav a.active:visited {
  color: #ffd970;
  /* font-weight: bold; */
}

.submitFeedback {
  padding-top: 20px;
  font-size: 1.5rem;
}

@media only screen and (max-width: 650px) {
  .app {
    flex-direction: column;
  }

  .nav {
    padding: 0;
  }

  .nav ul {
    padding: 0;
    margin: 0;
  }

  .nav li {
    display: inline-block;
    padding: 0;
  }
}

